<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLOGO"
        android:layout_width="wrap_content"
        android:layout_height="315dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/logo"
        android:src="@drawable/med1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="76dp" />

    <Button
        android:id="@+id/emergency"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:text="@string/emergency"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <Button
        android:id="@+id/hospital"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:text="@string/hospital"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:text="@string/about"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="82dp" />


</LinearLayout>
